Allow to programatically select next or previoius page of a wizard

BUG: 440736