kmymoney/wizards/kmymoneywizard.cpp
@@ -161,3 +161,13 @@ void KMyMoneyWizard::accept()
     if (page->isComplete())
         QDialog::accept();
 }
+
+void KMyMoneyWizard::selectNextPage()
+{
+    nextButtonClicked();
+}
+
+void KMyMoneyWizard::selectPreviousPage()
+{
+    backButtonClicked();
+}
